<resources>
    <string name="app_name">TraineeApp</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_forgot_pass">Forgot Password</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_all_users">All Users</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_contact_list">Contact List</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_no_internet">No Internet Connection</string>
    <string name="error_something_wrong">Something Went Wrong</string>
    <string name="txt_current_password">Current Password:</string>
    <string name="txt_password">password</string>
    <string name="txt_enter_new_password">Enter new password</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_get">get</string>
    <string name="txt_post">post</string>
    <string name="txt_patch">patch</string>
    <string name="txt_enter_e_mail">Enter e-mail</string>
    <string name="txt_enter_password">Enter password</string>
    <string name="txt_enter_comment">Enter Comment</string>
    <string name="txt_patch_request">Patch Request</string>
    <string name="txt_delete">delete</string>
    <string name="txt_change">Change</string>
    <string name="txt_enter_first_name">Enter first name</string>
    <string name="txt_enter_last_name">Enter last name</string>
    <string name="txt_enter_email">Enter email</string>
    <string name="txt_enter_mobile_number">Enter mobile number</string>
    <string name="txt_save_changes">Save Changes</string>
    <string name="txt_enter_confirm_password">Enter confirm password</string>
    <string name="txt_signup">signup</string>
    <string name="txt_already_have_an_account_signin">Already have an account? Signin</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_fetch_password">Fetch Password</string>
    <string name="txt_update">UPDATE</string>
    <string name="txt_e_mail">E-Mail :</string>
    <string name="txt_name">NAME :</string>
    <string name="txt_email_address">email address</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_create_new_account">Create new account</string>
    <string name="title_home">Home</string>
    <string name="txt_mobile_no">MOBILE No. :</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_broadcast_receiver">Broadcast Receiver</string>
    <string name="txt_enter_valid_mail">enter valid email</string>
    <string name="txt_enter_valid_number">enter valid mobile</string>
    <string name="txt_valid_password">password must be 5 character long.</string>
    <string name="txt_password_mismatch">password and confirm password not match.</string>
    <string name="txt_success_sign_up">Successfully Sign Up.</string>
    <string name="txt_invalid_login">Invalid login</string>
    <string name="txt_logout">Successfully Logout</string>
    <string name="txt_no_date">No Date Selected</string>
    <string name="txt_date_selected">Date Selected</string>
    <string name="txt_no_time">No Time Selected</string>
    <string name="txt_time_selected">Time Selected</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_mail_exist">Email already exist</string>
</resources>
