<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softices.traineeapp.activities.ChangePasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                app:theme="@style/AppThemeNoActionbar" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/txt_change_password"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/txt_larger"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_medium_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/small_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_current_password"
                android:textSize="@dimen/txt_large" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:layout_marginLeft="@dimen/small_medium_padding"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_large"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_medium_margin"
            android:layout_marginBottom="@dimen/small_medium_margin"
            android:hint="@string/txt_enter_new_password"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_large" />

        <EditText
            android:id="@+id/edt_conf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_medium_margin"
            android:hint="@string/txt_confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_large" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/small_medium_margin"
            android:background="@color/colorPrimary"
            android:text="@string/txt_change"
            android:textColor="@color/myWhite"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>