<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softices.traineeapp.activities.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            app:theme="@style/AppThemeNoActionbar" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small_padding"
            android:text="Sign Up"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/txt_larger"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_medium_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:onClick="onClickSelectPhoto"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_photo"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_first_name"
                android:inputType="text"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_first_name"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_last_name"
                android:inputType="text"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_last_name"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_mobile"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_password"
                android:inputType="textPassword"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_password"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/txt_large" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_conf_password"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_medium_margin"
                    android:background="@color/colorPrimary"
                    android:onClick="onClickDoSignup"
                    android:text="@string/txt_signup"
                    android:textColor="@color/myWhite" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_medium_margin"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="onClear"
                    android:text="@string/txt_clear"
                    android:textColor="@color/myWhite" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_link_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_layout"
                android:layout_marginTop="@dimen/small_medium_margin"
                android:gravity="center"
                android:onClick="onClickLinkSignin"
                android:text="@string/txt_already_have_an_account_signin"
                android:textSize="@dimen/txt_larger" />

        </RelativeLayout>

    </ScrollView>
</LinearLayout>