<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softices.traineeapp.activities.ForgotPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                app:theme="@style/AppThemeNoActionbar" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small_padding"
            android:text="Forgot Password"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/txt_larger"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgot_password"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginLeft="3dp"/>

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_email"
        android:layout_marginTop="@dimen/small_margin"/>

    <Button
        android:id="@+id/btn_fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/txt_fetch_password"
        android:drawableRight="@drawable/ic_arrow_24dp"
        android:padding="@dimen/small_medium_padding"/>

</LinearLayout>
