<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softices.traineeapp.activities.EditProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                app:theme="@style/AppThemeNoActionbar" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small_padding"
            android:text="Edit Profile"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/txt_larger"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_medium_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_photo"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_first_name"
                android:inputType="text"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_first_name"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_last_name"
                android:inputType="text"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_last_name"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/txt_large" />

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_email"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:hint="@string/txt_enter_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/txt_large" />

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edt_mobile"
                android:layout_marginLeft="3dp"
                android:text="Change Password ?"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/small_medium_margin"
                android:background="@color/colorPrimary"
                android:text="@string/txt_save_changes"
                android:textColor="@color/myWhite" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>